"""
Omega-Paradox Hive Recursion (Î©-PHR) Framework v0.9.3
Timeline Lattice gRPC Server Implementation

This module implements the research gRPC server for the Timeline Lattice service,
providing temporal event management, paradox detection, and causality analysis
through high-performance remote procedure calls.
"""

import asyncio
import logging
import signal
import sys
from typing import Optional
import grpc
from grpc import aio

# Import service implementation
from .models import TimelineEvent, TemporalParadox
from .config import TimelineServiceConfig


class SimpleTimelineRepository:
    """Simple in-memory repository for development."""

    def __init__(self, config: TimelineServiceConfig):
        self.config = config
        self.timelines = {}
        self.events = {}

    async def create_timeline(self, name: str, description: str = "") -> str:
        """Create a new timeline."""
        import uuid
        timeline_id = str(uuid.uuid4())
        self.timelines[timeline_id] = {
            'id': timeline_id,
            'name': name,
            'description': description,
            'events': []
        }
        return timeline_id

    async def add_event(self, timeline_id: str, event_data: dict) -> str:
        """Add an event to a timeline."""
        if timeline_id in self.timelines:
            import uuid
            event_id = str(uuid.uuid4())
            self.events[event_id] = event_data
            self.timelines[timeline_id]['events'].append(event_id)
            return event_id
        return ""

    async def get_timeline_status(self, timeline_id: str) -> str:
        """Get timeline status."""
        if timeline_id in self.timelines:
            return "active"
        return "not_found"


class TimelineLatticeServer:
    """
    Enterprise gRPC server for Timeline Lattice operations.

    Handles temporal event management, paradox detection, and causality
    analysis through efficient gRPC-based remote procedure calls.
    """

    def __init__(self, config: TimelineServiceConfig):
        """Initialize the Timeline Lattice server."""
        self.config = config
        self.repository = SimpleTimelineRepository(config)
        self.logger = logging.getLogger(__name__)
        self._shutdown_event = asyncio.Event()

    async def CreateTimeline(self, request, context):
        """Create a new temporal timeline."""
        try:
            timeline_id = await self.repository.create_timeline(
                name=request.name,
                description=request.description
            )

            # Return mock response
            return type('CreateTimelineResponse', (), {
                'timeline_id': timeline_id,
                'status': 'created'
            })()

        except Exception as e:
            self.logger.error(f"Error creating timeline: {str(e)}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Failed to create timeline: {str(e)}")
            return type('CreateTimelineResponse', (), {})()

    async def AddEvent(self, request, context):
        """Add an event to a temporal timeline."""
        try:
            event_data = {
                'event_type': request.event_type,
                'timestamp': request.timestamp,
                'data': request.data
            }

            event_id = await self.repository.add_event(request.timeline_id, event_data)

            return type('AddEventResponse', (), {
                'event_id': event_id,
                'status': 'added'
            })()

        except Exception as e:
            self.logger.error(f"Error adding event: {str(e)}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Failed to add event: {str(e)}")
            return type('AddEventResponse', (), {})()

    async def AnalyzeParadox(self, request, context):
        """Analyze potential temporal paradoxes."""
        try:
            # Mock analysis result
            return type('AnalyzeParadoxResponse', (), {
                'paradox_detected': False,
                'risk_level': 'low',
                'analysis': 'No paradoxes detected'
            })()

        except Exception as e:
            self.logger.error(f"Error analyzing paradox: {str(e)}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Failed to analyze paradox: {str(e)}")
            return type('AnalyzeParadoxResponse', (), {})()

    async def GetTimelineStatus(self, request, context):
        """Get the current status of a timeline."""
        try:
            status = await self.repository.get_timeline_status(request.timeline_id)

            return type('GetTimelineStatusResponse', (), {
                'timeline_id': request.timeline_id,
                'status': status,
                'event_count': len(self.repository.timelines.get(request.timeline_id, {}).get('events', []))
            })()

        except Exception as e:
            self.logger.error(f"Error getting timeline status: {str(e)}")
            context.set_code(grpc.StatusCode.INTERNAL)
            context.set_details(f"Failed to get timeline status: {str(e)}")
            return type('GetTimelineStatusResponse', (), {})()


async def serve(config: TimelineServiceConfig):
    """Start the Timeline Lattice gRPC server."""
    server = aio.server()

    # Add Timeline Lattice service
    timeline_service = TimelineLatticeServer(config)
    # Note: We'd normally add the servicer to the server here
    # but for now we'll just create a basic server

    # Configure server
    listen_addr = f"{config.server.host}:{config.server.port}"
    server.add_insecure_port(listen_addr)

    # Start server
    await server.start()
    logging.info(f"Timeline Lattice server started on {listen_addr}")

    # Wait for shutdown
    await timeline_service._shutdown_event.wait()
    await server.stop(30)


def main():
    """Main entry point for Timeline Lattice server."""
    logging.basicConfig(
        level=logging.INFO,
        format='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
    )

    config = TimelineServiceConfig()

    try:
        asyncio.run(serve(config))
    except KeyboardInterrupt:
        logging.info("Timeline Lattice server shutdown requested")
    except Exception as e:
        logging.error(f"Server error: {str(e)}")


if __name__ == "__main__":
    main()
